// Vitest Snapshot v1

exports[`Generating Graphs > should generate a graph 1`] = `
"digraph {
  node [shape=plaintext];
  subgraph {
    _1 [label=\\"1. Record architecture decisions\\"; URL=\\"0001-record-architecture-decisions.html\\"];
    _2 [label=\\"2. An idea that seems good at the time\\"; URL=\\"0002-an-idea-that-seems-good-at-the-time.html\\"];
    _1 -> _2 [style=\\"dotted\\", weight=1];
    _3 [label=\\"3. A better idea\\"; URL=\\"0003-a-better-idea.html\\"];
    _2 -> _3 [style=\\"dotted\\", weight=1];
    _4 [label=\\"4. This will work\\"; URL=\\"0004-this-will-work.html\\"];
    _3 -> _4 [style=\\"dotted\\", weight=1];
    _5 [label=\\"5. The end\\"; URL=\\"0005-the-end.html\\"];
    _4 -> _5 [style=\\"dotted\\", weight=1];
  }
  _3 -> _2 [label=\\"Supersedes\\", weight=0]
  _5 -> _3 [label=\\"Supersedes\\", weight=0]
}"
`;

exports[`Generating Graphs > should generate a graph with specified route and extension  1`] = `
"digraph {
  node [shape=plaintext];
  subgraph {
    _1 [label=\\"1. Record architecture decisions\\"; URL=\\"http://example.com/0001-record-architecture-decisions.xxx\\"];
    _2 [label=\\"2. An idea that seems good at the time\\"; URL=\\"http://example.com/0002-an-idea-that-seems-good-at-the-time.xxx\\"];
    _1 -> _2 [style=\\"dotted\\", weight=1];
    _3 [label=\\"3. A better idea\\"; URL=\\"http://example.com/0003-a-better-idea.xxx\\"];
    _2 -> _3 [style=\\"dotted\\", weight=1];
    _4 [label=\\"4. This will work\\"; URL=\\"http://example.com/0004-this-will-work.xxx\\"];
    _3 -> _4 [style=\\"dotted\\", weight=1];
    _5 [label=\\"5. The end\\"; URL=\\"http://example.com/0005-the-end.xxx\\"];
    _4 -> _5 [style=\\"dotted\\", weight=1];
  }
  _3 -> _2 [label=\\"Supersedes\\", weight=0]
  _5 -> _3 [label=\\"Supersedes\\", weight=0]
}"
`;
